--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "hedera-piggybank",
   "version": "1.0.0",
+  "type": "module",
   "description": "A decentralized piggybank with staking functionality on Hedera",
   "main": "dist/index.js",
   "scripts": {
     "build": "vite build",
     "dev": "vite",
     "start": "vite preview",
+    "generate:hedera": "ts-node scripts/generate-hedera-bytecode.ts",
+    "deploy:hedera": "ts-node scripts/deploy.ts",
+    "deploy:fs": "ts-node scripts/deploy-fs.ts",
     "deploy": "ts-node scripts/deploy.ts",
+    "check:file": "ts-node scripts/check-file.ts",
     "setup": "node scripts/setup.js",
     "test": "jest",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -38,6 +43,7 @@
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.0",
     "@types/qrcode": "^1.5.2",
@@ -49,6 +55,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "hardhat": "^2.26.3",
     "jest": "^29.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
